<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar_imageView"
        android:layout_width="@dimen/dimen_115"
        android:layout_height="@dimen/dimen_115"
        android:layout_marginTop="@dimen/dimen_120"
        android:src="@drawable/base_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_editText"
        android:layout_width="@dimen/dimen_200"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/size_text_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_imageView" />

    <TextView
        android:id="@+id/surname_editText"
        android:layout_width="@dimen/dimen_200"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        android:textSize="@dimen/size_text_20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_editText" />

    <TextView
        android:id="@+id/login_editText"
        android:layout_width="@dimen/dimen_350"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:textSize="@dimen/size_text_20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname_editText" />

    <TextView
        android:id="@+id/city_editText"
        android:layout_width="@dimen/dimen_350"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/size_text_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_editText" />

    <TextView
        android:id="@+id/nickname_editText"
        android:layout_width="@dimen/dimen_350"
        android:layout_height="wrap_content"
        android:hint="@string/nickname"
        android:textSize="@dimen/size_text_20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_editText" />


    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>